==> weixiaobai1937/rt-thread/bsp/acm32/acm32p4xx-nucleo/drivers/drv_gpio.c <==
#include <rthw.h>
#include <rtdevice.h>
#include "board.h"
#define __ACM32_PIN(index, gpio, gpio_index)                                \
    {                                                                       \
        index, GPIO##gpio, GPIO_PIN_##gpio_index                            \
    }
#define __ACM32_PIN_RESERVE                                                 \
    {                                                                       \
        -1, RT_NULL, 0                                                      \
    }
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

static void _pin_write(rt_device_t dev, rt_base_t pin, rt_uint8_t value)
{
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return;
    }

    HAL_GPIO_WritePin(index->gpio, index->pin, (GPIO_PinState)value);
}

static rt_ssize_t _pin_read(rt_device_t dev, rt_base_t pin)
{
    int value;
    const struct pin_index *index;

    value = PIN_LOW;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return -RT_EINVAL;
    }

    value = HAL_GPIO_ReadPin(index->gpio, index->pin);

    return value;
}

static void _pin_mode(rt_device_t dev, rt_base_t pin, rt_uint8_t mode)
{
    const struct pin_index *index;
    GPIO_InitTypeDef GPIO_InitStruct;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return;
    }

    /* Enable GPIO clock */
    if (index->gpio == GPIOA)
        __HAL_RCC_GPIOA_CLK_ENABLE();
    else if (index->gpio == GPIOB)
        __HAL_RCC_GPIOB_CLK_ENABLE();
    else if (index->gpio == GPIOC)
        __HAL_RCC_GPIOC_CLK_ENABLE();
    else if (index->gpio == GPIOD)
        __HAL_RCC_GPIOD_CLK_ENABLE();
    else if (index->gpio == GPIOE)
        __HAL_RCC_GPIOE_CLK_ENABLE();
    else if (index->gpio == GPIOF)
        __HAL_RCC_GPIOF_CLK_ENABLE();
    else if (index->gpio == GPIOG)
        __HAL_RCC_GPIOG_CLK_ENABLE();
    else if (index->gpio == GPIOH)
        __HAL_RCC_GPIOH_CLK_ENABLE();

    /* Configure GPIO_InitStructure */
    GPIO_InitStruct.Pin = index->pin;
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Drive = GPIO_DRIVE_LEVEL3;
    GPIO_InitStruct.Alternate = GPIO_FUNCTION_0;

    if (mode == PIN_MODE_OUTPUT)
    {
        /* output setting */
        GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
    }
    else if (mode == PIN_MODE_INPUT)
    {
        /* input setting: not pull. */
        GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        /* input setting: pull up. */
        GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
        GPIO_InitStruct.Pull = GPIO_PULLUP;
    }
    else if (mode == PIN_MODE_INPUT_PULLDOWN)
    {
        /* input setting: pull down. */
        GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
        GPIO_InitStruct.Pull = GPIO_PULLDOWN;
    }
    else if (mode == PIN_MODE_OUTPUT_OD)
    {
        /* output setting: od. */
        GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_OD;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
    }

    HAL_GPIO_Init(index->gpio, &GPIO_InitStruct);
}

static rt_err_t _pin_attach_irq(struct rt_device *device, rt_base_t pin,
                                     rt_uint8_t mode, void (*hdr)(void *args), void *args)
{
    const struct pin_index *index;
    rt_base_t level;
    rt_int32_t irqindex = -1;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return -RT_ENOSYS;
    }

    irqindex = PIN2INDEX(pin);

    level = rt_hw_interrupt_disable();
    if (pin_irq_hdr_tab[irqindex].pin == pin &&
            pin_irq_hdr_tab[irqindex].hdr == hdr &&
            pin_irq_hdr_tab[irqindex].mode == mode &&
            pin_irq_hdr_tab[irqindex].args == args)
    {
        rt_hw_interrupt_enable(level);
        return RT_EOK;
    }

    if (pin_irq_hdr_tab[irqindex].pin != -1)
    {
        rt_hw_interrupt_enable(level);
        return -RT_EBUSY;
    }

    pin_irq_hdr_tab[irqindex].pin = pin;
    pin_irq_hdr_tab[irqindex].hdr = hdr;
    pin_irq_hdr_tab[irqindex].mode = mode;
    pin_irq_hdr_tab[irqindex].args = args;
    rt_hw_interrupt_enable(level);

    return RT_EOK;
}

static rt_err_t _pin_irq_enable(struct rt_device *device, rt_base_t pin,
                                     rt_uint8_t enabled)
{
    const struct pin_index *index;
    rt_base_t level;
    rt_int32_t irqindex = -1;
    uint32_t exti_mode;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return -RT_ENOSYS;
    }

    irqindex = PIN2INDEX(pin);

    if (enabled == PIN_IRQ_ENABLE)
    {
        level = rt_hw_interrupt_disable();

        if (pin_irq_hdr_tab[irqindex].pin == -1)
        {
            rt_hw_interrupt_enable(level);
            return -RT_ENOSYS;
        }

        pin_irq_map[irqindex].gpio = index->gpio;

        switch (pin_irq_hdr_tab[irqindex].mode)
        {
        case PIN_IRQ_MODE_RISING:
            exti_mode = EXTI_MODE_IT_RISING;
            break;
        case PIN_IRQ_MODE_FALLING:
            exti_mode = EXTI_MODE_IT_FALLING;
            break;
        case PIN_IRQ_MODE_RISING_FALLING:
            exti_mode = EXTI_MODE_IT_RISING_FALLING;
            break;
        default:
            rt_hw_interrupt_enable(level);
            return -RT_EINVAL;
        }

        HAL_EXTI_SetConfigLine(index->gpio, pin_irq_map[irqindex].line, exti_mode);

        pin_irq_enable_mask |= 1 << irqindex;

        rt_hw_interrupt_enable(level);
    }
    else if (enabled == PIN_IRQ_DISABLE)
    {
        if ((pin_irq_enable_mask & (1 << irqindex)) == 0)
        {
            return -RT_ENOSYS;
        }

        level = rt_hw_interrupt_disable();

        HAL_EXTI_ClearConfigLine(pin_irq_map[irqindex].line);

        pin_irq_enable_mask &= ~(1 << irqindex);

        rt_hw_interrupt_enable(level);
    }
    else
    {
        return -RT_ENOSYS;
    }

    return RT_EOK;
}

void EXTI0_IRQHandler(void)
{
    rt_interrupt_enter();
    HAL_EXTI_IRQHandler(EXTI_LINE_0);
    if (pin_irq_hdr_tab[0].hdr)
    {
        pin_irq_hdr_tab[0].hdr(pin_irq_hdr_tab[0].args);
    }
    rt_interrupt_leave();
}

void EXTI1_IRQHandler(void)
{
    rt_interrupt_enter();
    HAL_EXTI_IRQHandler(EXTI_LINE_1);
    if (pin_irq_hdr_tab[1].hdr)
    {
        pin_irq_hdr_tab[1].hdr(pin_irq_hdr_tab[1].args);
    }
    rt_interrupt_leave();
}

void EXTI2_IRQHandler(void)
{
    rt_interrupt_enter();
    HAL_EXTI_IRQHandler(EXTI_LINE_2);
    if (pin_irq_hdr_tab[2].hdr)
    {
        pin_irq_hdr_tab[2].hdr(pin_irq_hdr_tab[2].args);
    }
    rt_interrupt_leave();
}

void EXTI3_IRQHandler(void)
{
    rt_interrupt_enter();
    HAL_EXTI_IRQHandler(EXTI_LINE_3);
    if (pin_irq_hdr_tab[3].hdr)
    {
        pin_irq_hdr_tab[3].hdr(pin_irq_hdr_tab[3].args);
    }
    rt_interrupt_leave();
}

void EXTI4_IRQHandler(void)
{
    rt_interrupt_enter();
    HAL_EXTI_IRQHandler(EXTI_LINE_4);
    if (pin_irq_hdr_tab[4].hdr)
    {
        pin_irq_hdr_tab[4].hdr(pin_irq_hdr_tab[4].args);
    }
    rt_interrupt_leave();
}

void EXTI9_5_IRQHandler(void)
{
    rt_interrupt_enter();
    HAL_EXTI_IRQHandler(EXTI_LINE_5);
    HAL_EXTI_IRQHandler(EXTI_LINE_6);
    HAL_EXTI_IRQHandler(EXTI_LINE_7);
    HAL_EXTI_IRQHandler(EXTI_LINE_8);
    HAL_EXTI_IRQHandler(EXTI_LINE_9);
    if (pin_irq_hdr_tab[5].hdr)  pin_irq_hdr_tab[5].hdr(pin_irq_hdr_tab[5].args);
    if (pin_irq_hdr_tab[6].hdr)  pin_irq_hdr_tab[6].hdr(pin_irq_hdr_tab[6].args);
    if (pin_irq_hdr_tab[7].hdr)  pin_irq_hdr_tab[7].hdr(pin_irq_hdr_tab[7].args);
    if (pin_irq_hdr_tab[8].hdr)  pin_irq_hdr_tab[8].hdr(pin_irq_hdr_tab[8].args);
    if (pin_irq_hdr_tab[9].hdr)  pin_irq_hdr_tab[9].hdr(pin_irq_hdr_tab[9].args);
    rt_interrupt_leave();
}

void EXTI15_10_IRQHandler(void)
{
    rt_interrupt_enter();
    HAL_EXTI_IRQHandler(EXTI_LINE_10);
    HAL_EXTI_IRQHandler(EXTI_LINE_11);
    HAL_EXTI_IRQHandler(EXTI_LINE_12);
    HAL_EXTI_IRQHandler(EXTI_LINE_13);
    HAL_EXTI_IRQHandler(EXTI_LINE_14);
    HAL_EXTI_IRQHandler(EXTI_LINE_15);
    if (pin_irq_hdr_tab[10].hdr) pin_irq_hdr_tab[10].hdr(pin_irq_hdr_tab[10].args);
    if (pin_irq_hdr_tab[11].hdr) pin_irq_hdr_tab[11].hdr(pin_irq_hdr_tab[11].args);
    if (pin_irq_hdr_tab[12].hdr) pin_irq_hdr_tab[12].hdr(pin_irq_hdr_tab[12].args);
    if (pin_irq_hdr_tab[13].hdr) pin_irq_hdr_tab[13].hdr(pin_irq_hdr_tab[13].args);
    if (pin_irq_hdr_tab[14].hdr) pin_irq_hdr_tab[14].hdr(pin_irq_hdr_tab[14].args);
    if (pin_irq_hdr_tab[15].hdr) pin_irq_hdr_tab[15].hdr(pin_irq_hdr_tab[15].args);
    rt_interrupt_leave();
}
